# youtubemusic-mcp

./: .gitignore  DEPLOYMENT_SUMMARY.md  LICENSE  README.md  pyproject.toml  server.py  update_auth.py
.claude/: README.md
.github/workflows/: ci.yml
docs/: AUTH_UPDATE.md  CLAUDE_SETUP.md  CONTRIBUTING.md  OAUTH_SETUP.md
examples/: browser.json.example  oauth.json.example
tests/: test_server.py
